--- a/EnglishExamWeb/index.html
+++ b/EnglishExamWeb/index.html
@@ -550,7 +550,7 @@
                 </div>
             </div>
             <div class="dialog-content" id="dialog-text" style="font-size: 1rem; padding-top: 5px;">
-                <!-- Text typed here -->
+                <!-- Story text will appear here -->
             </div>
             <!-- Ask Mia Input Area -->
             <div class="ask-mia-input-area hidden" id="ask-mia-input-area">
@@ -561,9 +561,6 @@
                         <i class="ph-bold ph-paper-plane-tilt"></i>
                     </button>
                 </div>
-            </div>
-            <div class="dialog-next-indicator">
-                <i class="ph-duotone ph-caret-down"></i>
             </div>
         </div>
     </div>
